fix bug on mobile

--- a/webtheband/assets/css/reponsive.css
+++ b/webtheband/assets/css/reponsive.css
@@ -69,6 +69,7 @@
 
     .contact-form .form-control {
         padding: 15px;
+        font-size: 16px;
     }
 
 
@@ -92,6 +93,10 @@
 
     .contact-info {
         line-height: 2;
+    }
+
+    .contact-submit-btn {
+        font-size: 16px;
     }
 }
 
