--- a/webtheband/assets/css/style.css
+++ b/webtheband/assets/css/style.css
@@ -335,6 +335,10 @@ html {
     padding: 11px 16px;
     display: inline-block;
     margin-top: 15px;
+    border: none;
+    text-align: center;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
